# callflow-tracer

./: .gitignore  3D_COMPLETE_SUMMARY.md  3D_NEW_FEATURES.md  3D_VISUALIZATION_FEATURES.md  ADVANCED_FEATURES_ADDED.md  ADVANCED_FEATURES_COMPLETE.md  ADVANCED_FEATURES_GUIDE.md  ADVANCED_PROMPTS_SUMMARY.md  ADVANCED_STATS_CHARTS.md  AGENT_RUNTIME_ARCHITECTURE_PROMPT.md  AI_ENHANCEMENTS_GUIDE.md  AI_FEATURES_SUMMARY.md  ALL_NEW_FEATURES_SUMMARY.md  ARROW_IMPROVEMENTS.md  CHANGELOG.md  CHANGELOG_LAYOUTS.md  CLI_ARCHITECTURE.md  CLI_CHANGELOG.md  CLI_GUIDE.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_QUICKREF.md  CLI_README.md  CODE_PREVIEW_FEATURE.md  COMPLETE_FIX_DETAILS.md  COMPLETE_PACKAGE_OVERVIEW.md  DISTRIBUTED_TRACER_ANALYSIS.md  DISTRIBUTED_TRACER_QUICK_REFERENCE.md  DISTRIBUTED_TRACER_REFACTORING.md  DOCUMENTATION_MAP.md  ENHANCED_FEATURES.md  EXAMPLES_AND_TESTS_SUMMARY.md  FEATURES_QUICKSTART.md  FEATURES_SUMMARY.md  FEATURES_WORKING_GUIDE.md  FLAMEGRAPH_SUMMARY.md  FUNNEL_ANALYSIS_GUIDE.md  GEMINI_TEST_RESULTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LAYOUTS_SUMMARY.md  (+40 more)
callflow_tracer/: __init__.py  anomaly_detection.py  async_tracer.py  auto_instrumentation.py  cli.py  code_churn.py  code_quality.py  comparison.py  custom_metrics.py  exporter.py  flamegraph.py  flamegraph_enhanced.py  jupyter.py  memory_leak_detector.py  memory_leak_visualizer.py  opentelemetry_exporter.py  otel_config.py  plugin_system.py  predictive_analysis.py  profiling.py  tracer.py  tracer_old.py
docs/: ADVANCED_FEATURES.md  ADVANCED_LAYOUTS.md  AI_FEATURES.md  AI_FEATURES_GUIDE.md  AI_QUICK_REFERENCE.md  AI_README.md  API_DOCUMENTATION.md  CLI_GUIDE.md  CODE_CHURN_GUIDE.md  CODE_QUALITY_GUIDE.md  COMPLETE_DOCUMENTATION_INDEX.md  CUSTOM_METRICS_GUIDE.md  DOCUMENTATION_SUMMARY.md  EXAMPLES_GUIDE.md  FEATURES_COMPLETE.md  FEATURE_MAPPING.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  INTEGRATIONS_GUIDE.md  LAYOUT_COMPARISON.md  LAYOUT_VISUAL_GUIDE.md  MODULES_DOCUMENTATION.md  NEW_FEATURES_INDEX.md  OTEL_ADVANCED_GUIDE.md  OWNER_TELEMETRY_GUIDE.md  PREDICTIVE_ANALYSIS_GUIDE.md  QUICK_START_LAYOUTS.md  README_DOCUMENTATION.md  TASK_COMPLETION_REPORT.md  USER_GUIDE.md  _config.yml  index.md  v0_2_4_features.md  v0_3_0_RELEASE_NOTES.md  v0_4_1_RELEASE_NOTES.md
examples/: 3d_visualization_demo.html  3d_visualization_demo.py  3d_viz_demo.py  ASYNC_COMPARISON_README.md  FLAMEGRAPH_README.md  JUPYTER_README.md  README_OTEL.md  advanaced_layout_demo.py  advanced_analysis_demo.py  advanced_debugging_example.py  advanced_layouts_demo.html  advanced_layouts_demo.py  agent_advanced.py  agent_basic_ask.py  ai_features_demo.py  anomaly_detection_example.py  anthropic_example.py  async_example.py  cli_comprehensive_demo.py  cli_demo.py  cli_test_commands.bat  cli_test_commands.sh  comparison_example.py  debug_test.py  example_advanced_features.py  example_ai_enhancements.py  example_custom_metrics.py  example_otel_export.py  example_prompts_usage.py  fast_apiexample.py  fastapi_example.py  flamegraph_enhanced_demo.py  flamegraph_example.py  funnel_analysis_example.py  funnel_quick_start.py  gemini_example.py  jupyter_example.ipynb  jupyter_standalone_demo.py  memory_leak_example.py  new_examplew.py  (+11 more)
landing/: index.html
tests/: test_3d_visualization.py  test_advanced_features.py  test_advanced_layouts.py  test_agent_swarm.py  test_ai_enhancements.py  test_ai_features.py  test_async_tracing.py  test_benchmark_mode.py  test_command_line_architecture.py  test_comparison_mode.py  test_cprofile_fix.py  test_cpu_profile_fix.py  test_example.py  test_flamegraph.py  test_flamegraph_enhanced.py  test_format_fix.py  test_json_export.py  test_jupyter_integration.py  test_layout_fix.py  test_llm_instrumentation.py  test_memory_leak_detection.py  (+6 more)
(+207 files in other folders)
