[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callflow-tracer"
version = "0.2.3"
description = "A lightweight Python library for tracing function call relationships and visualizing them as interactive graphs"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Rajveer Rathod", email = "rathodrajveer1311@gmail.com" }
]
maintainers = [
    { name = "Rajveer Rathod", email = "rathodrajveer1311@gmail.com" }
]
keywords = [
    "tracing",
    "profiling",
    "debugging",
    "call-graph",
    "visualization",
    "performance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.8"
dependencies = [
    "networkx>=2.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8"
]

[project.urls]
Homepage = "https://github.com/rajveer43/callflow-tracer"
Repository = "https://github.com/rajveer43/callflow-tracer"
Issues = "https://github.com/rajveer43/callflow-tracer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["callflow_tracer*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
