[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callflow-tracer"
version = "0.3.3"
description = "A lightweight Python library for tracing function call relationships and visualizing them as interactive graphs,  anomaly detection, and OpenTelemetry export for production observability"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Rajveer Rathod", email = "rathodrajveer1311@gmail.com" }
]
maintainers = [
    { name = "Rajveer Rathod", email = "rathodrajveer1311@gmail.com" }
]
keywords = [
    "tracing",
    "profiling",
    "debugging",
    "call-graph",
    "visualization",
    "performance",
    "observability",
    "monitoring",
    "metrics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.8"
dependencies = [
    "networkx>=2.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8"
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-exporter-jaeger>=1.20.0",
    "opentelemetry-exporter-prometheus>=1.20.0",
    "protobuf>=3.20.0",
    "grpcio>=1.50.0"
]
all = [
    "callflow-tracer[dev,otel]"
]

[project.urls]
Homepage = "https://github.com/rajveer43/callflow-tracer"
Repository = "https://github.com/rajveer43/callflow-tracer"
Issues = "https://github.com/rajveer43/callflow-tracer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["callflow_tracer*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.scripts]
callflow-tracer = "callflow_tracer.cli:main"
